--- a/hkm/static/hkm/scss/_navbar.scss
+++ b/hkm/static/hkm/scss/_navbar.scss
@@ -158,9 +158,11 @@ button.navbar-toggle {
 }
 
 @media (min-width: 901px) {
-    .collapse {
-        display: block;
-        height: auto !important;
+    .navigation {
+        .collapse {
+            display: block;
+            height: auto !important;
+        }
     }
     
     .navbar-toggle {
